fixed typed font size on mobile

--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -540,4 +540,10 @@ header {
 			right: 15px;
 		}
 	}
+
+	.headerInfo {
+		.typed {
+			font-size: 1.33rem;
+		}
+	}
 }
